# firelog

./: Cargo.toml  Dioxus.toml  index.html
assets/: firestore.js  main.css  manifest.json  qmark64  sw.js
src/: cache.rs  firebase.rs  main.rs  sync.rs  task.rs  utils.rs
src/frontend/: about.rs  edit.rs  home.rs  mod.rs  new.rs  stats.rs  units.rs
