[package]
name = "firelog"
version = "0.1.0"
authors = ["Tor <torberge@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }

futures-util = "0.3"
futures = "0.3"

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
web-sys = "0.3.69"
wasm-bindgen = "0.2.92"
serde_json = "1.0.120"
serde = "1.0.203"
js-sys = "0.3.69"
