[package]
name = "firelog"
version = "0.1.0"
authors = ["Tor <torberge@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }

futures-util = "0.3"
futures = "0.3"
uuid = {version =  "1.8.0", features = ["v4", "js", "serde"]}
wasm-bindgen = {version = "0.2.92", features = ["serde-serialize"]}
#gloo-timers = "0.2"


# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
web-sys = "0.3.69"
serde_json = "1.0.120"
serde = "1.0.203"
js-sys = "0.3.69"
wasm-bindgen-futures = "0.4.42"
gloo =  {version = "0.11.0", features = ["futures"]}
serde-wasm-bindgen = "0.6.5"
gloo-utils = {version = "0.2.0", features = ["serde"] }
